--- a/react-project/package.json
+++ b/react-project/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^12.20.55",
     "@types/react": "^17.0.83",
     "@types/react-dom": "^17.0.26",
+    "@types/styled-components": "^5.1.34",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^9.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.15",
     "typescript": "^4.9.5",
     "web-vitals": "^1.1.2"
   },
