--- a/react-project/package.json
+++ b/react-project/package.json
@@ -11,21 +11,26 @@
     "@types/react": "^17.0.83",
     "@types/react-dom": "^17.0.26",
     "@types/styled-components": "^5.1.34",
+    "@types/yup": "^0.32.0",
+    "formik": "^2.4.6",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primereact": "^9.6.2",
+    "primereact": "^10.9.2",
+    "quill": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
     "typescript": "^4.9.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build && npm run copy-angular",
+    "test": "craco test",
+    "copy-angular": "xcopy /S /I \"build\\static\\js\\*.js\" \"..\\angular-project\\src\\assets\\aw-react\\static\\js\" /Y"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
