--- a/react-project/tsconfig.json
+++ b/react-project/tsconfig.json
@@ -18,7 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "_pages/*": ["_pages/*"]
+    }
   },
   "include": [
     "src"
