--- a/angular-project/angular.json
+++ b/angular-project/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/aw-react/static/js/bundle.js"]
           },
           "configurations": {
             "production": {
@@ -96,7 +96,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/aw-react/static/js/bundle.js"]
           }
         }
       }
