--- a/angular-project/package.json
+++ b/angular-project/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@types/yup": "^0.32.0",
+    "formik": "^2.4.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "yup": "^1.6.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
