--- a/react-project/package.json
+++ b/react-project/package.json
@@ -19,6 +19,7 @@
     "quill": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
