--- a/react-project/package.json
+++ b/react-project/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.55",
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/yup": "^0.32.0",
     "formik": "^2.4.6",
+    "framer-motion": "^4.1.17",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
