updated Angular App styles

--- a/angular-project/angular.json
+++ b/angular-project/angular.json
@@ -35,9 +35,9 @@
             "production": {
               "budgets": [
                 {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                 "type": "initial",
+                "maximumWarning": "2mb",
+                "maximumError": "3mb"
                 },
                 {
                   "type": "anyComponentStyle",
